--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    text-decoration: none;
+    list-style-type: none;
   }
 
   .container::after,
@@ -11,30 +13,29 @@
       display: table;
       clear: both;
   }
-/*stile per tutti i link e liste*/
-a{
-    text-decoration: none;
-}
-ul{
-    list-style-type: none;
+
+.father-box{
+    display: flex;
 }
 /* STILE ASIDE SPOTIFY */
 .spoti-aside{
+    position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
     width: 200px;
     height: 100vh;
-    background-color: #040404
+    background-color: #040404;
+    z-index: 99;
 }
 
 /* stile unico per gli aside links */
 aside a:hover{
-    color: #ffffff;
+    color: #6ece3b;
 }
 aside a{
-    color: #b3b3b3
+    color: #b3b3b3;
 }
 
 /* logo aside */
@@ -44,7 +45,7 @@ aside a{
 
 #logo img{
     max-width: 100%;
-    height: 50px;
+    height: 65px;
     margin: 20px 0;
 }
 
@@ -121,4 +122,32 @@ aside a{
     float: left;
     line-height: 50px;
     padding-left: 10px;
+}
+/* STILE HEADER SPOTIFY */
+header{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: flex-end;
+    background-color: #0b0b0b;
+}
+.container{
+    line-height: 100px;
+    margin-right: 30px;
+}
+.container button {
+  transition-duration: 0.4s;
+  background-color: #0b0b0b;
+  border-color: #b3b3b3;
+  border-radius: 50px;
+  padding: 15px 30px;
+  font-size: 16px;
+  font-weight: 800;
+  color: #b3b3b3;
+}
+
+.container button:hover {
+  background-color: #6fca3b;
+  border-color: #6fca3b;
+  color: #ffffff;
 }
