--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 
 .father-box{
     display: flex;
+    flex-direction: column;
 }
 /* STILE ASIDE SPOTIFY */
 .spoti-aside{
@@ -125,6 +126,7 @@ aside a{
 }
 /* STILE HEADER SPOTIFY */
 header{
+    position: fixed;
     width: 100%;
     height: 100px;
     display: flex;
@@ -136,7 +138,7 @@ header{
     margin-right: 30px;
 }
 .container button {
-  transition-duration: 0.4s;
+  transition-duration: 0.8s;
   background-color: #0b0b0b;
   border-color: #b3b3b3;
   border-radius: 50px;
@@ -150,4 +152,10 @@ header{
   background-color: #6fca3b;
   border-color: #6fca3b;
   color: #ffffff;
+}
+
+/* STILE MAIN SPOTIFY */
+main{
+    width: 100%;
+    display: flex;
 }
