--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
     justify-content: space-between;
     align-items: flex-start;
     width: 200px;
-    height: 100vh;
+    height: calc(100vh - 100px);
     background-color: #040404;
     z-index: 99;
 }
@@ -160,4 +160,15 @@ header{
 main{
     width: 100%;
     display: flex;
+    background-color: yellow;
+}
+
+/* FOOTER SPOPTIFY */
+footer {
+   position:fixed;
+   left:0;
+   bottom:0;
+   height:100px;
+   width:100%;
+   background-color: #282828;
 }
