--- a/css/style.css
+++ b/css/style.css
@@ -59,14 +59,14 @@ aside a{
 }
 
 .navbar.top p{
-  font-weight: 800;
+  font-weight: 700;
   padding-left: 10px;
 }
 /* seconda sez. nav dell'aside */
 .navbar.middle h4{
   padding: 10px 0;
   font-size: 18px;
-  font-weight: 900;
+  font-weight: 700;
   text-transform: uppercase;
   color: #ffffff;
 }
@@ -76,7 +76,7 @@ aside a{
 
 .navbar.middle a{
   font-size: 15px;
-  font-weight: 800;
+  font-weight: 700;
   letter-spacing: 0.5px;
 }
 
@@ -85,7 +85,7 @@ aside a{
   align-items: center;
   padding-bottom: 15px;
   font-size: 18px;
-  font-weight: 800;
+  font-weight: 700;
 }
 
 #crea i{
@@ -150,7 +150,7 @@ header{
   border-radius: 50px;
   padding: 15px 30px;
   font-size: 16px;
-  font-weight: 800;
+  font-weight: 700;
   color: #b3b3b3;
 }
 
@@ -175,17 +175,19 @@ main{
     justify-content: center;
     align-items: center;
 }
+
 .selection{
-    padding: 15px 15px;
+    margin: 0 15px;
+    padding: 15px 0;
     height: 100%;
 }
-.music-sections .selection:hover {
-    border-bottom: 6px solid #6ece3b;
 
+.music-sections .selection:hover {
+    border-bottom: 4px solid #6ece3b;
 }
 
 .music-sections a{
-    font-weight: 800;
+    font-weight: 700;
     text-transform: uppercase;
     color: #b3b3b3;
 }
