--- a/css/style.css
+++ b/css/style.css
@@ -124,9 +124,11 @@ aside a{
 /*-- BLOCCO HEADER E MAIN SPOTIFY */
 .blocco1{
     width: 100%;
+    height:100vh;
     display: flex;
     flex-wrap: wrap;
     float: left;
+    background-color: #121212;
 }
 
 /* STILE HEADER SPOTIFY */
@@ -165,11 +167,11 @@ main{
     margin-top: 100px;
     margin-left: 10%;
     width: 100%;
-    height:100vh;
 }
 
 .music-sections{
     display: flex;
+    flex-wrap: wrap;
     height: 50px;
     justify-content: center;
     align-items: center;
@@ -193,20 +195,39 @@ main{
 
 .titolo-recenti h4{
     font-size: 25px;
-    padding: 30px;
+    margin: 40px;
+    color: #ffffff;
 }
 
 .band-recenti{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
 .band-recenti-card{
     width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 .band-recenti-card img{
     width: 100%;
+    padding-bottom: 15px;
 }
+.band-recenti-card h5{
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 25px;
+    padding-bottom: 10px;
+}
+.band-recenti-card small{
+    color: #b3b3b3;
+    font-weight: bold;
+}
+
+
 /* FOOTER SPOTIFY */
 footer {
    position:fixed;
