--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ header{
     display: flex;
     justify-content: flex-end;
     background-color: #0b0b0b;
+    z-index: 90;
 }
 
 .container{
@@ -189,7 +190,6 @@ main{
 
 .music-sections .selection:hover {
     border-bottom: 4px solid #6ece3b;
-    background-color: lightgrey;
 }
 
 .music-sections a{
@@ -213,17 +213,18 @@ main{
 }
 
 .band-recenti-card{
-    width: 250px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    padding: 0 15px;
 
 }
 
 .band-recenti-card img{
     width: 100%;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 }
 .cover{
     position: relative;
@@ -258,7 +259,7 @@ main{
     color: #ffffff;
     font-weight: 700;
     font-size: 25px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
 }
 .band-recenti-card small{
     color: #b3b3b3;
@@ -279,24 +280,39 @@ main{
 }
 
 .album-consigliati{
+    width: 40%;
     display: flex;
     flex-wrap: wrap;
     margin-top: 20px;
-    margin-left: 40px;
-    justify-content: flex-start;
+    margin-left: 20px;
+    justify-content: space-between;
 }
 
 .consigliati-card{
-    width: 250px;
+    width: 300px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    align-items: flex-start;
-    text-align: center;
+    align-items: center;
 }
 
 .consigliati-card img{
     width: 100%;
-    padding-bottom: 15px;
+    padding-right: 30px;
+}
+
+.consigliati-card h5{
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 25px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    margin-right: 30px;
+}
+.consigliati-card small{
+    color: #b3b3b3;
+    font-weight: bold;
+    margin-right: 30px;
 }
 
 /* FOOTER SPOTIFY */
@@ -312,9 +328,31 @@ footer {
 
 @media screen and (max-width: 768px) {
     .spoti-aside{
-        width: 60px;
+        width: 50px;
+    }
+    .top-elements, .navbar-top i,{
+        text-align: center;
     }
     #hide-element{
         display: none;
+    }
+    #crea{
+      flex-direction: column;
+    }
+
+    .band-recenti-card{
+        padding-bottom: 20px;
+
+    }
+    .consigliati-card{
+        text-align: center;
+        margin-left: 40px;
+        padding-bottom: 15px;
+    }
+
+    .titolo-recenti h4{
+        margin-top: 100px;
+        margin-left: 90px;
+
     }
 }
