--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,7 @@ main{
     font-size: 25px;
     margin-top: 40px;
     margin-left: 20px;
+    padding-top: 30px;
     color: #ffffff;
 }
 .titolo-consigli p{
