--- a/css/style.css
+++ b/css/style.css
@@ -343,8 +343,9 @@ footer {
 }
 
 .footer-left{
-    width: 15%;
+    width: 25%;
     display: flex;
+    flex-wrap: nowrap;
     justify-content: flex-start;
     line-height: 100px;
 }
@@ -360,7 +361,7 @@ footer {
 }
 
 .footer-middle{
-    width: 50%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -436,9 +437,8 @@ audio{
         justify-content: space-around;
         line-height: 100px;
     }
-    .play-controls i{
-        padding-left: 15px;
-        padding-right: 15px;
+    .play-controls {
+        display: none;
     }
     .footer-middle{
         width: 60%;
@@ -473,10 +473,11 @@ audio{
     .album-consigliati{
         justify-content: center;
     }
+
+
 }
 
 @media screen and (min-width: 1200px){
     #hide-desktop{
         display: none;
     }
-}
