--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,7 @@ main{
     padding: 20px 0;
     height: 100%;
     border-bottom: 4px solid transparent;
+    border-radius: 5px;
 }
 
 .music-sections .selection:hover {
